--- a/_drafts/2015-10-15-kanban.md
+++ b/_drafts/2015-10-15-kanban.md
@@ -24,9 +24,9 @@ date:       2015-10-11
 
   In meinem Kühlschrank gibt es Platz für vier Liter Milch. Wenn ich einkaufen gehe, kaufe ich exakt soviel Liter Milch wie fehlen nach. Jedoch ich kaufe niemals mehr. Was ich, und viele andere wahrscheinlich auch, hier machen, nennt sich im Management "Kanban".
 
-  Kanban kommt aus dem japanischen und bedeutet Karte oder Beleg. Die Karte diente als eine Referenz auf das Ding. In meinem Fall gäbe es im System vier Karten. Jeder Liter Milch im Kühlschrank besetzt eine Karte. An den "freien" Karten sehe ich wieviel Liter Milch ich Kaufen soll.
+  Kanban kommt aus dem japanischen und bedeutet Karte oder Beleg. Die Karte diente als eine Referenz auf das Ding. In meinem Fall gäbe es im System vier Karten. Jeder Liter Milch im Kühlschrank besetzt eine Karte. An den "freien" Karten sehe ich wie viel Liter Milch ich Kaufen soll.
 
-  Wenn ich ins Geschäft gehe, wiederholt sich der Vorgang. Auch das Geschäft hat einen bestimmten Platz für Milch. Wenn ich hier Milch entnehme, wird der leere Platz wieder aufgefüllt. Letztlich steuere ich als Kunde, wieviel Milch produziert wird. Das nennt man **Pull-Prinzip**.
+  Wenn ich ins Geschäft gehe, wiederholt sich der Vorgang. Auch das Geschäft hat einen bestimmten Platz für Milch. Wenn ich hier Milch entnehme, wird der leere Platz wieder aufgefüllt. Letztlich steuere ich als Kunde, wie viel Milch produziert wird. Das nennt man **Pull-Prinzip**.
 
   > Es müsste doch möglich sein, den Materialfluss
   > in der Produktion nach dem Supermarkt-Prinzip zu
@@ -41,9 +41,9 @@ date:       2015-10-11
 
 ## Das Toyota-Produktions-System
 
-  In der Autoproduktion wurde das System von Taiichi Ohno 1947 bei Toyota entwickelt. Und noch heute wendet es Toyota, mitlerweile der größte Autokonzern der Welt, erfolgreich an.
+  In der Autoproduktion wurde das System von Taiichi Ohno 1947 bei Toyota entwickelt. Und noch heute wendet es Toyota, mittlerweile der größte Autokonzern der Welt, erfolgreich an.
 
-  Wenn einem Toyota ein Teil in der Werkstatt ausgetauscht werden muss entnimmt die Werkstatt den Teil aus dem Lager. Automatisch bekommt das nächste lokale Toyota-Lager den Auftrag den Teil nachzuliefern. Von dort geht der Auftrag zum nächst größeren Lager bis es irfgendwann einmal in einem Toyota-Werk landet. In dem Werk wird dann genau das benötigte Teil nachproduziert.
+  Wenn einem Toyota ein Teil in der Werkstatt ausgetauscht werden muss entnimmt die Werkstatt den Teil aus dem Lager. Automatisch bekommt das nächste lokale Toyota-Lager den Auftrag den Teil nachzuliefern. Von dort geht der Auftrag zum nächst größeren Lager bis es irgendwann einmal in einem Toyota-Werk landet. In dem Werk wird dann genau das benötigte Teil nach produziert.
   
   Der Aufstieg von Toyota war so Erfolgreich, dass er genau erforscht und oft kopiert wurde. Im Jahr 1990 erschien ein Buch mit dem Titel "The Machine that changed the World : The Story of Lean Production."[^Womack] Seit dem spricht man in diesem Zusammenhang auch von **Lean Management**.
 
@@ -51,13 +51,13 @@ date:       2015-10-11
 
 
 
-## *Kanban* in der Software-Enwicklung
+## *Kanban* in der Software-Entwicklung
 
 ### Agile Methoden
 
   Ebenfalls in den 1990er-Jahren entwickelte sich in der Software-Industrie Methoden die sehr viele Parallelen zu *Lean Management* haben. Man nennt diese Art der Softwareentwicklung **agil**. Zwei Gemeinsamkeiten sind z.B. dass beide Ansätze sich sehr stark am Kunden orientieren und so wenig wie möglich "Müll" erzeugen wollen.
 
-  Im Jahr 2007 stellte *David Anderson* *Kanban* für die IT vor. (Ich unterscheide zwischen Taiichi Ohnos Kanban [kanban] und David Andersons *Kanban* [kænbæn] in kursiv und amerikanischer Aussprache.) Anderson geht es nicht darum Kanban eins zu eins zu übersetzen, sondern er sucht nach Wegen Softwareproduktion zu verbessern. Dabei fällt ihm auf, dass einige Element aus Kanban gut funktionieren und die Elemente auf viel weniger Wiederstand bei der Implemantation stoßen als zum Beispiel *Scrum*.
+  Im Jahr 2007 stellte *David Anderson* *Kanban* für die IT vor. (Ich unterscheide zwischen Taiichi Ohnos Kanban [kanban] und David Andersons *Kanban* [kænbæn] in kursiv und amerikanischer Aussprache.) Anderson geht es nicht darum Kanban eins zu eins zu übersetzen, sondern er sucht nach Wegen Softwareproduktion zu verbessern. Dabei fällt ihm auf, dass einige Element aus Kanban gut funktionieren und die Elemente auf viel weniger Widerstand bei der Implementation stoßen als zum Beispiel *Scrum*.
 
 
 ### 6 Praktiken des *Kanban*
@@ -79,7 +79,7 @@ date:       2015-10-11
 
 ### *Kanban*-Board
 
-  Populärstes Merkmal von *Kanban* ist das sogenannte *Kanban-Board*, eine Tafel mit Spalten und Post-its. Die Einfachste Version des Kanban-Board ist die dreispaltige Version mit den Spalten *To Do*, *Doing* und *Done*. Das Board stellt den Arbeitsfluss da. In der Software-Entwicklung beginnt es mit dem Product-Backlog, einer Sammlung von Problemen die gelöst werden müssen, und endet mit deren Implementierung. Dazwischen gibt es mehrere Stufen die das Item durchlaufen muss. Jede Stufe hat equivalent zu den Karten in Kanban, eine bestimmte Anzahl an freien Plätzen für Aufgaben.
+  Populärstes Merkmal von *Kanban* ist das sogenannte *Kanban-Board*, eine Tafel mit Spalten und Post-its. Die Einfachste Version des Kanban-Board ist die dreispaltige Version mit den Spalten *To Do*, *Doing* und *Done*. Das Board stellt den Arbeitsfluss da. In der Software-Entwicklung beginnt es mit dem Product-Backlog, einer Sammlung von Problemen die gelöst werden müssen, und endet mit deren Implementierung. Dazwischen gibt es mehrere Stufen die das Item durchlaufen muss. Jede Stufe hat äquivalent zu den Karten in Kanban, eine bestimmte Anzahl an freien Plätzen für Aufgaben.
 
 
 ## Pull vs. Push
