Bilder zu Kanban hinzugefügt

--- a/_drafts/2015-10-15-kanban.md
+++ b/_drafts/2015-10-15-kanban.md
@@ -26,6 +26,8 @@ date:       2015-10-11
 
   Kanban kommt aus dem japanischen und bedeutet Karte oder Beleg. Die Karte diente als eine Referenz auf das Ding. In meinem Fall gäbe es im System vier Karten. Jeder Liter Milch im Kühlschrank besetzt eine Karte. An den "freien" Karten sehe ich wie viel Liter Milch ich Kaufen soll.
 
+  ![Kanban-Prozess mit Milch.](/images/kanbanshop.jpg)
+
   Wenn ich ins Geschäft gehe, wiederholt sich der Vorgang. Auch das Geschäft hat einen bestimmten Platz für Milch. Wenn ich hier Milch entnehme, wird der leere Platz wieder aufgefüllt. Letztlich steuere ich als Kunde, wie viel Milch produziert wird. Das nennt man **Pull-Prinzip**.
 
   > Es müsste doch möglich sein, den Materialfluss
@@ -81,6 +83,9 @@ date:       2015-10-11
 
   Populärstes Merkmal von *Kanban* ist das sogenannte *Kanban-Board*, eine Tafel mit Spalten und Post-its. Die Einfachste Version des Kanban-Board ist die dreispaltige Version mit den Spalten *To Do*, *Doing* und *Done*. Das Board stellt den Arbeitsfluss da. In der Software-Entwicklung beginnt es mit dem Product-Backlog, einer Sammlung von Problemen die gelöst werden müssen, und endet mit deren Implementierung. Dazwischen gibt es mehrere Stufen die das Item durchlaufen muss. Jede Stufe hat äquivalent zu den Karten in Kanban, eine bestimmte Anzahl an freien Plätzen für Aufgaben.
 
+  ![Einfaches Kanbanboard.](/images/kanbanboard.jpg)
+
+
 
 ## Pull vs. Push
 
@@ -101,12 +106,15 @@ date:       2015-10-11
 
 ### Informationsfluss
 
-  Doch der Entscheidende Unterschied zwischen einem Pull und einem Push System ist der Fluss der Information. Kanban ist ein System in dem Information zurück fließen kann. In *Kanban* optimiert den Durchfluss, lässt den Kunden jedoch nicht selektieren welches Item er benötigt. 
+  Doch der entscheidende Unterschied zwischen einem Pull und einem Push System ist der Fluss der Information. Kanban ist ein System in dem Information zurück fließen kann. In *Kanban* optimiert den Durchfluss, lässt den Kunden jedoch nicht selektieren welches Item er benötigt. 
 
 
 ### Ring vs. Kette
 
+
   Vielleicht wäre es zielführender nicht zwischen Push und Pull sondern zwischen **Ring** und **Kette** zu Unterscheiden. *Kanban* ist, inklusive der nicht abgebildeten Feedbackschleife, als Ring zu verstehen in dem Information hauptsächlich in eine Richtung läuft. Eine große Feedbackschleife. Kanban ist eher wie eine Kette zu verstehen. Eine Kette besteht aus vielen kleinen "Ringen", vielen kleinen Feedbackschleifen.
+
+  ![Informationsfluss in Kanban.](/images/kanbankettering.jpg)
 
   
 
