--- a/_drafts/2015-10-15-kanban.md
+++ b/_drafts/2015-10-15-kanban.md
@@ -99,22 +99,48 @@ date:       2015-10-11
 
 ### *Kanban* ist kein Pull-System
 
-  Auch wenn Anderson behauptet sein *Kanban*-System wäre ein Pull-System. Stimmt das? Ich behaupte nein. Was Anderson als Pull beschreibt, ist das Begrenzen der Buffer. Aber den Input vom Kunden finden wir auf der linken Seite, im (oft unbegrenzten) Product-Backlog. Der Backlog benötigt eine seperate Feedback-Schleife um sich an den Kundenbedürfnissen zu orientieren.
+  Auch wenn Anderson behauptet sein *Kanban*-System wäre ein Pull-System. Stimmt das? Ich behaupte nein. Was Anderson als Pull beschreibt, ist das Begrenzen der Buffer. Aber den Input vom Kunden finden wir auf der linken Seite, im (oft unbegrenzten) Product-Backlog. Der Backlog benötigt eine separate Feedback-Schleife um sich an den Kundenbedürfnissen zu orientieren.
 
-  Man könnte meinen, im Prinzip ist es egal, wie das Druckgefälle in einem System entsteht. Wichtig ist, der Durchfluss. Und wie Anderson beweist, der Durchfluss ist wichtig. 
+  Man könnte meinen, im Prinzip ist es egal, wie das Druckgefälle in einem System entsteht. Wichtig ist, der Durchfluss. Und wie Anderson beweist, der Durchfluss ist wichtig.
 
+  Ein vergleichbares System ist unter dem Namen ConWIP (Constant Work-In-Process) bekannt. Hier darf ein neuer Auftrag ins System, wenn ein alter das System verlässt.[^Conwip] Das System in dem das WIP (Work-In-Progress) konstant gehalten wird beginnt hier nach dem Backlog und endet vor dem Done. In einem vereinfachten Kanbanboard wäre es nur die Spalte "Doing".
+
+[^Conwip]: [Conwip – Wikipedia](https://de.wikipedia.org/wiki/Conwip)
 
 ### Informationsfluss
 
-  Doch der entscheidende Unterschied zwischen einem Pull und einem Push System ist der Fluss der Information. Kanban ist ein System in dem Information zurück fließen kann. In *Kanban* optimiert den Durchfluss, lässt den Kunden jedoch nicht selektieren welches Item er benötigt. 
+  Doch der entscheidende Unterschied zwischen einem Pull und einem Push System ist der Fluss der Information. Kanban ist ein System in dem Information zurück fließen kann. In *Kanban* optimiert den Durchfluss, lässt den Kunden jedoch nicht selektieren welches Item er benötigt.
 
 
 ### Ring vs. Kette
 
 
-  Vielleicht wäre es zielführender nicht zwischen Push und Pull sondern zwischen **Ring** und **Kette** zu Unterscheiden. *Kanban* ist, inklusive der nicht abgebildeten Feedbackschleife, als Ring zu verstehen in dem Information hauptsächlich in eine Richtung läuft. Eine große Feedbackschleife. Kanban ist eher wie eine Kette zu verstehen. Eine Kette besteht aus vielen kleinen "Ringen", vielen kleinen Feedbackschleifen.
+  Da die Unterscheidung von Push und Pull auch in Experten-Kreisen zu Verwirrung sorgt führe ich hier eine neue Unterscheidung ein.[^Pushpull]
+  In *Kanban* (wie auch in ConWIP) existiert eine große Feedback-Schleife. Es ist eine Art **Ring**. Die Feedback Schleife ist zu einem Teil *außerhalb* des abgebildeten Systems.
 
   ![Informationsfluss in Kanban.](/images/kanbankettering.jpg)
+
+  In Kanban gibt es eine Kette von Feedback-Schleifen. Das Feedback läuft rückwärts durch das System. Das hat mehrere Vorteile:
+
+1. Das Feedback läuft nur so viele Stationen wie notwendig.
+
+2. Die Stationen, die näher am Kunden sind, bekommen "unverfälschteres" Feedback.
+
+3. Der Kunde *zieht* sich genau das, was er benötigt. Es ist keine externe Steuerung notwendig.
+
+4. Der Begriff *Lean*, also schlank, kann auf den gesamten Produktions-Prozess angewendet werden. Es ist weniger "Müll" im Backlog.
+
+
+[^Pushpull]: Push-Pull Text
+
+  
+## Mit Vorsicht zu genießen!
+
+  *Kanban* ist ein Weg, wie man mit vergleichsweise geringem Aufwand, die Effizienz in Projektteams steigern kann. 
+
+  Jedoch suggeriert *Kanban* durch seinen Namen eine Nähe zu der Idee von Taiichi Ohno sich nicht ganz nachvollziehen lässt. Einige Elemente fehlen ganz, andere Elemente die zur Wirkung von *Kanban* beitragen, wie ein *Kanbanboard* haben anderen Ursprung.
+
+  Das ist so lange kein Problem, solange man nicht denkt, man würde mit *Kanban* den Geist von Ohno in sich tragen. Den Elemente die Eric Rise in *Lean Start-Up* an Kanban lobt, implementiert man durch *Kanban* **nicht** automatisch.
 
   
 
