--- a/_drafts/2015-10-15-kanban.md
+++ b/_drafts/2015-10-15-kanban.md
@@ -103,7 +103,8 @@ date:       2015-10-11
 
   Man könnte meinen, im Prinzip ist es egal, wie das Druckgefälle in einem System entsteht. Wichtig ist, der Durchfluss. Und wie Anderson beweist, der Durchfluss ist wichtig.
 
-  Ein vergleichbares System ist unter dem Namen ConWIP (Constant Work-In-Process) bekannt. Hier darf ein neuer Auftrag ins System, wenn ein alter das System verlässt.[^Conwip] Das System in dem das WIP (Work-In-Progress) konstant gehalten wird beginnt hier nach dem Backlog und endet vor dem Done. In einem vereinfachten Kanbanboard wäre es nur die Spalte "Doing".
+  Ein vergleichbares System ist unter dem Namen ConWIP (Constant Work-In-Process) bekannt. Hier darf ein neuer Auftrag ins System, wenn ein alter das System verlässt.[^Conwip]
+  Würde man *Kanban* als ConWIP System betrachten, würde es *nach* dem Backlog beginnen und *vor* der Done Spalte enden. Auf einem vereinfachten Kanbanboard wäre es nur die Spalte "Doing".
 
 [^Conwip]: [Conwip – Wikipedia](https://de.wikipedia.org/wiki/Conwip)
 
@@ -138,9 +139,9 @@ date:       2015-10-11
 
   *Kanban* ist ein Weg, wie man mit vergleichsweise geringem Aufwand, die Effizienz in Projektteams steigern kann. 
 
-  Jedoch suggeriert *Kanban* durch seinen Namen eine Nähe zu der Idee von Taiichi Ohno sich nicht ganz nachvollziehen lässt. Einige Elemente fehlen ganz, andere Elemente die zur Wirkung von *Kanban* beitragen, wie ein *Kanbanboard* haben anderen Ursprung.
+  Jedoch suggeriert *Kanban*, durch seinen Namen, eine Nähe zu der Idee von Taiichi Ohno, die sich nicht ganz nachvollziehen lässt. Einige Elemente fehlen ganz, andere Elemente, die zur Wirkung von *Kanban* beitragen, wie ein *Kanbanboard* haben anderen Ursprung.
 
-  Das ist so lange kein Problem, solange man nicht denkt, man würde mit *Kanban* den Geist von Ohno in sich tragen. Den Elemente die Eric Rise in *Lean Start-Up* an Kanban lobt, implementiert man durch *Kanban* **nicht** automatisch.
+  Das alles ist so lange kein Problem, solange man nicht denkt, man würde mit *Kanban* den Geist von Ohno implementieren. Den Elemente die Eric Rise in *Lean Start-Up* an Kanban lobt, implementiert man durch *Kanban* **nicht** automatisch.
 
   
 
