letzte Änderung vor Veröffentlichung

--- a/_drafts/2015-10-15-kanban.md
+++ b/_drafts/2015-10-15-kanban.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-categories: design thinking agile
+categories: kanban lean agile
 
 
 
@@ -9,13 +9,13 @@ categories: design thinking agile
 
 
 
-title:      Kanban ist weder Lean noch Kanban
+title:      Vorsicht mit Kanban in der IT!
 summary:
-            Kaban in der IT ist, anders als das Toyota-Kaban, kein Pull-System. Der Kunde steuert nicht ziehend, sondern über eine Schleife.
+            Kaban in der IT hat viel weniger mit dem klassischen Kanban gemeinsam als man vermuten würde. Wer das nicht beachtet, macht sich falsche Hoffnungen.
 
 
 author:     Peter Flucher
-date:       2015-10-11
+date:       2015-10-18
 
 ---
 
@@ -49,7 +49,7 @@ date:       2015-10-11
   
   Der Aufstieg von Toyota war so Erfolgreich, dass er genau erforscht und oft kopiert wurde. Im Jahr 1990 erschien ein Buch mit dem Titel "The Machine that changed the World : The Story of Lean Production."[^Womack] Seit dem spricht man in diesem Zusammenhang auch von **Lean Management**.
 
-[^Womack]: Womack, James; Jones, Daniel; Roos, Daniel: The Machine that changed the World : The Story of Lean Production. New York: Harper Collins, 1990 – ISBN 978-0-06097-417-6.
+
 
 
 
@@ -87,7 +87,7 @@ date:       2015-10-11
 
 
 
-## Pull vs. Push
+## Die Unterschiede zwischen *Kanban* und Kanban
 
   Ziel von *Kanban* ist es, wie in Kanban möglichst wenig Schmutz zu erzeugen und das System zu optimieren. Jedoch obwohl die Systeme ähnlich sind, ist die Funktionsweise anders. 
 
@@ -106,7 +106,7 @@ date:       2015-10-11
   Ein vergleichbares System ist unter dem Namen ConWIP (Constant Work-In-Process) bekannt. Hier darf ein neuer Auftrag ins System, wenn ein alter das System verlässt.[^Conwip]
   Würde man *Kanban* als ConWIP System betrachten, würde es *nach* dem Backlog beginnen und *vor* der Done Spalte enden. Auf einem vereinfachten Kanbanboard wäre es nur die Spalte "Doing".
 
-[^Conwip]: [Conwip – Wikipedia](https://de.wikipedia.org/wiki/Conwip)
+
 
 ### Informationsfluss
 
@@ -121,7 +121,7 @@ date:       2015-10-11
 
   ![Informationsfluss in Kanban.](/images/kanbankettering.jpg)
 
-  In Kanban gibt es eine Kette von Feedback-Schleifen. Das Feedback läuft rückwärts durch das System. Das hat mehrere Vorteile:
+  In Kanban gibt es eine **Kette** von Feedback-Schleifen. Das Feedback läuft rückwärts durch das System. Das hat mehrere Vorteile:
 
 1. Das Feedback läuft nur so viele Stationen wie notwendig.
 
@@ -132,7 +132,7 @@ date:       2015-10-11
 4. Der Begriff *Lean*, also schlank, kann auf den gesamten Produktions-Prozess angewendet werden. Es ist weniger "Müll" im Backlog.
 
 
-[^Pushpull]: Push-Pull Text
+
 
   
 ## Mit Vorsicht zu genießen!
@@ -141,12 +141,16 @@ date:       2015-10-11
 
   Jedoch suggeriert *Kanban*, durch seinen Namen, eine Nähe zu der Idee von Taiichi Ohno, die sich nicht ganz nachvollziehen lässt. Einige Elemente fehlen ganz, andere Elemente, die zur Wirkung von *Kanban* beitragen, wie ein *Kanbanboard* haben anderen Ursprung.
 
-  Das alles ist so lange kein Problem, solange man nicht denkt, man würde mit *Kanban* den Geist von Ohno implementieren. Den Elemente die Eric Rise in *Lean Start-Up* an Kanban lobt, implementiert man durch *Kanban* **nicht** automatisch.
+  Das alles ist so lange kein Problem, solange man nicht denkt, man würde mit *Kanban* den Geist von Ohno implementieren. Die Elemente die Eric Rise in *Lean Start-Up*[^Ries] an Toyota lobt, implementiert man durch *Kanban* **nicht** automatisch.
 
   
 
 ## Fußnoten
 
+[^Pushpull]: Hopp, J. Wallace; Spearman, Mark L.: To Pull or Not to Pull: What is the Question? In Manufacturing & Service Operations Management: Volume 6 Issue 2, March 2004 <http://www2.isye.gatech.edu/~jvandeva/Classes/6203/2007/PushPull.pdf>. 
 
+[^Conwip]: Conwip. Auf Wikipedia (de) <https://de.wikipedia.org/wiki/Conwip>
 
+[^Womack]: Womack, James; Jones, Daniel; Roos, Daniel: The Machine that changed the World : The Story of Lean Production. New York: Harper Collins, 1990 – ISBN 978-0-06097-417-6. <http://www.amazon.de/Machine-That-Changed-World-Revolutionizing/dp/0743299795> (Amazon)
 
+[^Ries]: Eric Ries: *The Lean Startup: How Constant Innovation Creates Radically Successful Businesses* 2011, <http://www.amazon.de/Lean-Startup-Innovation-Successful-Businesses/dp/0670921602/ref=sr_1_2?ie=UTF8&qid=1444573396&sr=8-2&keywords=lean+startup>. (Amzazon.de)
